--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.4",
-    "@angular/cli": "~15.2.4",
+    "@angular-devkit/build-angular": "^16.2.4",
+    "@angular/cli": "~16.2.4",
     "@angular/compiler-cli": "^16.2.7",
     "@angular/localize": "^16.2.7",
     "@types/jasmine": "~4.3.0",
