--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.7",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.6",
+    "angular-cli-ghpages": "^1.0.7",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "highlight.js": "^11.8.0",
